solve most WCAG issues, some just cannot be solved or take too long, not worth it

--- a/FlaskTodo/app/static/css/main.css
+++ b/FlaskTodo/app/static/css/main.css
@@ -277,6 +277,11 @@ a.article-title:hover {
   color: #dcdcdc;
 }
 
+/* For event titles in calendar*/
+.fc-event-title.fc-sticky {
+  color: black !important;
+}
+
 [data-theme="dark"] h1, 
 [data-theme="dark"] h2, 
 [data-theme="dark"] h3, 
